refactor: book author user changed
