# docs/meta.go
@@ -28,50 +28,89 @@
 // swagger:meta
 package docs
 
+import "golibrary/internal/model"
+
+// swagger:route GET /library/authors author Author
+//		Получение списка авторов
+// security:
+// - basic
+// responses:
+// 	 200: body:Author Cписок авторов успешно получен
+
+// swagger:parameters Author
+
+// swagger:model Author
+type Author struct {
+	// in:body
+	ID        int           `json:"id"`
+	Name      string        `json:"name"`
+	BirthDate string        `json:"birth_date"`
+	Books     []*model.Book `json:"books"`
+}
+
+// swagger:route PUT /library/take/{bookId}/{userId} book BookTake
+//		Взять книгу
+// Security:
+// - basic
+// Responses:
+// 	 200: body:Book Книга успешно получена
+
+// swagger:parameters BookTake
+type _ struct {
+	//in:path
+	BookId int `json:"bookId"`
+	//in:path
+	UserId int `json:"userId"`
+}
+
+// swagger:model Book
+type BookTake struct {
+	// in:body
+	ID       int    `json:"id"`
+	Title    string `json:"title"`
+	UserID   int    `json:"user_id"`
+	AuthorID int    `json:"author_id"`
+}
+
+// swagger:route PUT /library/return/{bookId}/{userId} book BookReturn
+//		Сдать книгу
+// Security:
+// - basic
+// Responses:
+// 	 200: body:Book Книга успешно сдана
+
+// swagger:parameters BookReturn
+type _ struct {
+	//in:path
+	BookId int `json:"bookId"`
+	//in:path
+	UserId int `json:"userId"`
+}
+
+// swagger:model Book
+type BookReturn struct {
+	// in:body
+	ID       int    `json:"id"`
+	Title    string `json:"title"`
+	UserID   int    `json:"user_id"`
+	AuthorID int    `json:"author_id"`
+}
+
+// swagger:route GET /library/users user UsersList
+//		Список читателей
+// Security:
+// - basic
+// Responses:
+// 	 200: body:User Список читателей успешно получен
+
+// swagger:parameters UsersList
+
+// swagger:model User
+type UsersList struct {
+	// in:body
+	ID    int    `json:"id"`
+	Name  string `json:"name"`
+	Email string `json:"email"`
+}
+
 //go:generate `swagger generate spec -o ./public/swagger.json --scan-models`
-
-// swagger:route POST /api/register auth RegisterRequest
-//		Регистрация нового пользователя
-// Security:
-// - basic
-// Responses:
-// 	 200: body:RegisterResponse
-
-// swagger:parameters RegisterRequest
-type RegisterRequest struct {
-	// Регистрация
-	// in:body
-	// required:true
-	// example: {"name":"tim","password":"123"}
-	Registration string
-}
-
-// swagger:model RegisterResponse
-type RegisterResponse struct {
-	// in:body
-	// Token содержит информацию о регистрации
-	Token string
-}
-
-// swagger:route POST /api/login auth LoginRequest
-//		Авторизация пользователя
-// Security:
-// - basic
-// Responses:
-// 	 200: body:LoginResponse
-
-// swagger:parameters LoginRequest
-type LoginRequest struct {
-	// Авторизация
-	// in:body
-	// required:true
-	// example: {"name":"tim","password":"123"}
-	Authorization string
-}
-
-// swagger:model LoginResponse
-type LoginResponse struct {
-	// in:body
-	// Token содержит информацию о токене
-	Token string
-}
