# internal/controller/book/controller.go
@@ -1,6 +1,7 @@
 package controller
 
 import (
+	"encoding/json"
 	"net/http"
 	"strconv"
 
@@ -33,7 +34,32 @@ func (b *Book) Add(w http.ResponseWriter, r *http.Request) {
 
 // BookReturn implements Booker.
 func (b *Book) Return(w http.ResponseWriter, r *http.Request) {
-	panic("unimplemented")
+	rawUserId := chi.URLParam(r, "userId")
+	rawBookId := chi.URLParam(r, "bookId")
+
+	userId, err := strconv.Atoi(rawUserId)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	bookId, err := strconv.Atoi(rawBookId)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	book, err := b.service.BookReturn(r.Context(), userId, bookId)
+	if err != nil {
+		if err.Error() == "книга уже сдана" {
+			http.Error(w, err.Error(), http.StatusConflict)
+		} else {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+		}
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(book)
 }
 
 // BookTake implements Booker.
@@ -52,7 +78,18 @@ func (b *Book) Take(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	b.service.BookTake(r.Context(), userId, bookId)
+	book, err := b.service.BookTake(r.Context(), userId, bookId)
+	if err != nil {
+		if err.Error() == "книга недоступна" {
+			http.Error(w, err.Error(), http.StatusConflict)
+		} else {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+		}
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(book)
 }
 
 // ListBooks implements Booker.
